Fix modal image alignment and size issue

--- a/aden/css/main.css
+++ b/aden/css/main.css
@@ -46,6 +46,11 @@ body {
     }
 }
 
+img.center {        
+  display:block;
+  margin-left:auto;
+  margin-right:auto;
+}
 .container-odd {
     background-color:#F3E5F5; /* Purple 50 */
     padding:20px;
@@ -201,5 +206,5 @@ body {
 .to-top.active {
     bottom:32px;
     pointer-events: auto;
-  opacity:1;
+    opacity:1;
 }
